crates/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_by_target_locator__runs_by_target.snap
---
source: crates/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupSystemTool" ]
    2 [ label="SyncSystemProject(server)" ]
    3 [ label="RunTask(server:build)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 2 [ ]
}

